# midi-patch-changer

./: Cargo.toml  HARDWARE.md  README.md  patches
src/: cli.rs  gui.rs  main.rs  midi.rs
src/gui/: devicepicker.rs  mod.rs  patchsystem.rs
templates/: roland_gokeys  roland_jp08
