[package]
name = "midi-patch-changer"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
serde = "1.0.152"
serde_derive = "1.0.152"
console = "0.15.3"
# default feature uses wgpu which failed on rpi4, but glow works fine
iced = {version = "0.6.0", default-features = false, features = ["glow", "smol"]}
iced_native = "0.7.0"